<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <discovery.contentful.ui.MaxWidthFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="25dp">

                <discovery.contentful.ui.CFTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/discovery_app"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="62dp"
                    android:layout_marginTop="62dp"
                    tools:src="@drawable/logo_contentful"/>

                <discovery.contentful.ui.CFTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/access_your_space"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <discovery.contentful.ui.ClearableEditText
                    android:id="@+id/et_space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/credentials_space"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"/>

                <discovery.contentful.ui.ClearableEditText
                    android:id="@+id/et_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/credentials_access_token"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"/>

                <discovery.contentful.ui.CFButton
                    android:id="@+id/btn_go"
                    style="@style/CFButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/open_space"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:minHeight="20dp"/>

                <discovery.contentful.ui.CFButton
                    android:id="@+id/btn_secondary"
                    style="@style/CFButton.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_demo_space"/>

                <discovery.contentful.ui.CFTextView
                    android:id="@+id/tv_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:drawableLeft="@drawable/ic_help"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/need_help"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </ScrollView>

    </discovery.contentful.ui.MaxWidthFrameLayout>

    <!-- Tutorial Fragment -->
    <FrameLayout
        android:id="@+id/tutorial_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</merge>
